--- a/Naruto/src/Page/FavoritesPage/FavoritesPage.css
+++ b/Naruto/src/Page/FavoritesPage/FavoritesPage.css
@@ -3,9 +3,11 @@
   background-color: #f8f9fa;
 }
 
-.card {
+.card{
   transition: transform 0.2s;
   border-radius: 10px;
+  margin: 15px 0; 
+  max-width: 100%;
 }
 
 .card:hover {
@@ -16,5 +18,11 @@
   text-align: center;
   font-size: 1.5em;
   color: #007bff;
-  margin-top: 20px;
+  margin: 20px;
 }
+.card-img-top{
+  width: 150px; /* Ajusta el tamaño según lo que necesites */
+  height: auto;
+}
+
+
